merci seigneur l'upload des images passe

--- a/public/templates/6/test2/index.html
+++ b/public/templates/6/test2/index.html
@@ -389,6 +389,10 @@
                 
             
                 
+            
+                
+            
+                
             </head>
 <body class="builderjs-layout">
 
@@ -402,7 +406,7 @@
 <div builder-element="PageElement" style="padding: 20px;" class="">
 <nav builder-element="BlockElement" class="">
             <div class="logo" builder-element="BlockElement">
-                <img src="/api/template/6/images/Sc.png" alt="Logo Restaurant" builder-element="" class="" style="width: auto; height: auto;">
+                <img alt="Logo Restaurant" builder-element="" class="" style="width: 111px; height: auto;" src="/storage/uploads/22Tx9Upz43zSMy7v6b6nfmAdDUEKDfAYNbzF7U2b.png">
             </div>
             <ul class="nav-links" builder-element="ListElement">
                 <li builder-element="TextElement" class="">Home</li>
@@ -460,18 +464,18 @@
         <section id="specialites" class="specialites" builder-element="BlockElement">
             <h2 class="builder-content" builder-element="TextElement">Nos Spécialités</h2>
             <div class="specialites-grid" builder-element="BlockElement">
-                <div class="specialite-card fade-in" builder-element="BlockElement">
-                    <img src="/api/template/6/images/IMG-20241003-WA0008.jpg" alt="Plat Signature" builder-element="">
+                <div class="specialite-card fade-in visible" builder-element="BlockElement">
+                    <img src="/api/template/6/images/IMG-20241003-WA0008.jpg" alt="Plat Signature" builder-element="" class="" style="width: 100%; height: 497px;">
                     <h3 class="builder-content" builder-element="TextElement">Plat Signature</h3>
                     <p class="builder-content" builder-element="TextElement">Notre fameux filet de bœuf Wellington</p>
                 </div>
-                <div class="specialite-card fade-in" builder-element="BlockElement">
-                    <img src="/api/template/6/images/IMG-20241003-WA0010.jpg" alt="Dessert Maison" builder-element="">
+                <div class="specialite-card fade-in visible" builder-element="BlockElement">
+                    <img alt="Dessert Maison" builder-element="" class="" style="width: 100%; height: 267px;" src="/storage/uploads/OsY3r7r5Nwbss6uIHQ05nTHFdEY7MjnXPXJDR1uo.jpg">
                     <h3 class="builder-content" builder-element="TextElement">Dessert Maison</h3>
                     <p class="builder-content" builder-element="TextElement">Soufflé au chocolat et sa glace vanille</p>
                 </div>
-                <div class="specialite-card fade-in" builder-element="BlockElement">
-                    <img src="/api/template/6/images/IMG-20241004-WA0003.jpg" alt="Vin Sélection" builder-element="">
+                <div class="specialite-card fade-in visible" builder-element="BlockElement">
+                    <img src="/api/template/6/images/IMG-20241004-WA0003.jpg" alt="Vin Sélection" builder-element="" class="" style="width: 252px; height: auto;">
                     <h3 class="builder-content" builder-element="TextElement">Carte des Vins</h3>
                     <p class="builder-content" builder-element="TextElement">Une sélection pointue de grands crus</p>
                 </div>
